# dressupOOP

./: CMakeLists.txt  README.md  launcher.command  magazin.txt  main.cpp  tastatura.txt
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
data/: magazin.txt  tastatura.txt
include/: Animal.h  Articol.h  ArticolDerivate.h  ArticolFactory.h  Dulap.h  Exceptions.h  GameSession.h  Haina.h  Magazin.h  Observer.h  Pantalon.h  Personaj.h  Quest.h  Rochie.h  StrategieRecomandare.h  TemplateUtils.h  Tinuta.h  TinutaBuilder.h
include/gui/: Game.h
scripts/: run_cppcheck.sh  run_valgrind.sh
src/: Animal.cpp  Articol.cpp  ArticolDerivate.cpp  ArticolFactory.cpp  Dulap.cpp  Exceptions.cpp  GameSessions.cpp  Haina.cpp  Magazin.cpp  Observer.cpp  Pantalon.cpp  Personaj.cpp  Quest.cpp  Rochie.cpp  StrategieRecomandare.cpp  Tinuta.cpp  TinutaBuilder.cpp  main.cpp
src/gui/: Game.cpp
